# FlutterSamples

./: .editorconfig  .gitignore  README.md
concurrency/isolate_workbench/: README.md  pubspec.yaml
concurrency/isolate_workbench/lib/: main.dart
concurrency/isolate_workbench/windows/: CMakeLists.txt
concurrency/windows_sync/: README.md  pubspec.yaml
concurrency/windows_sync/example1/: README.md  pubspec.yaml
concurrency/windows_sync/example2/: pubspec.yaml
concurrency/windows_sync/lib/: sync_object.dart
eng/: Create-DevCert.ps1  Create-MakePri-config.ps1  Create-Sparse-MSIX.ps1  DevCert.cer  DevCert.pfx
sample_plugin/: .metadata  README.md  ffigen.yaml  pubspec.yaml
sample_plugin/example/: README.md  pubspec.yaml
sample_plugin/example/lib/: main.dart
sample_plugin/example/windows/: CMakeLists.txt
sample_plugin/lib/: sample_plugin.dart  sample_plugin_bindings_generated.dart
sample_plugin/src/: CMakeLists.txt  sample_plugin.c
sample_plugin/windows/: CMakeLists.txt
windows_app.backup/: README.md  pubspec.yaml
windows_app.backup/windows/runner/: flutter_window.cpp  main.cpp
windows_app/test/: widget_test.dart
windows_app/windows/: CMakeLists.txt
windows_app/windows/runner/: Runner.rc  flutter_window.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
windows_app_model/: pubspec.yaml
windows_app_model/example/: README.md  pubspec.yaml
windows_app_model/example/lib/: main.dart
windows_app_model/example/windows/: CMakeLists.txt
windows_app_model/lib/: windows_appmodel.dart
windows_app_model/lib/src/: platform_checker.dart  windows_appmodel.dart  windows_appmodel_bindings.dart
windows_app_model/windows/: AppModelHelper.cpp  AppModelHelper.h  CMakeLists.txt  DllExport.h  framework.h
windows_background_task/: README.md  pubspec.yaml
windows_background_task.sparse_package/: AppxManifest.xml  resources.pri  resources.scale-200.pri
windows_background_task/lib/: background_main.dart  main.dart
windows_background_task/test/: widget_test.dart
windows_background_task/windows/: CMakeLists.txt
windows_background_task/windows/flutter/: generated_plugins.cmake
windows_background_task/windows/runner/: CMakeLists.txt  ExecutionMode.cpp  ExecutionMode.h  MsixPackageHelper.cpp  MsixPackageHelper.h  Runner.rc  flutter_window.h  main.cpp  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
windows_background_task_plugin/: .metadata  README.md  pubspec.yaml
windows_background_task_plugin/lib/: windows_background_task_client.dart  windows_background_task_host.dart  windows_background_task_plugin.dart  windows_background_task_plugin_bindings_generated.dart
windows_background_task_plugin/lib/src/: background_task_client.dart  background_task_client_bindings.dart  background_task_host.dart  plugin_native_apis.dart  windows_exception.dart
windows_background_task_plugin/windows/: CMakeLists.txt
windows_background_task_plugin/windows/client/: BackgroundTaskClientApi.h  BackgroundTaskHelper.cpp  BackgroundTaskHelper.h  BackgroundTaskWithTimeTriggerApis.cpp  CMakeLists.txt  DllExports.h  InitializationApis.cpp  globals.cpp  version.rc
windows_background_task_plugin/windows/com_host/: CMakeLists.txt  com_dart_background_task.cpp  com_dart_background_task.h  com_initializer.h  com_register_process_for_type.h  debug_log.h  host.aps  host.manifest  host.rc  pch.h  utils.cpp  win32_window.h
windows_background_task_plugin/windows/host/: CMakeLists.txt  com_dart_background_task.cpp  com_dart_background_task.h  com_initializer.cpp  com_register_process_for_type.h  com_task_factory.h  flutter_engine_host.cpp  flutter_engine_host.h  flutter_method_channel.cpp  flutter_method_channel.h  flutter_window.cpp  flutter_window.h  host.manifest  host.rc  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
windows_background_task_plugin/windows/uwp_host/: CMakeLists.txt  Directory.Build.targets  com_dart_background_task.cpp  dart_background_task.cpp  dart_background_task.h  dart_background_task.idl  debug_log.h  dll_main.cpp  flutter_engine_host.cpp  flutter_engine_host.h  host.rc  pch.h  utils.cpp  utils.h  win32_window.cpp
windows_background_task_plugin/windows/uwp_runner/: CMakeLists.txt  com_initializer.cpp  com_initializer.h  debug_log.h  flutter_engine_host.cpp  flutter_engine_host.h  flutter_method_channel.h  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  utils.h  uwp_runner.aps  uwp_runner.exe.manifest  uwp_runner.rc  win32_window.cpp  win32_window.h
windows_background_task_plugin/windows/winrt/: CMakeLists.txt
windows_console/: LICENSE  README.md  pubspec.yaml
windows_console/lib/: main.dart
windows_console/windows/: CMakeLists.txt
windows_console/windows/runner/: CMakeLists.txt  Runner.rc  flutter_engine_host.cpp  main.cpp  utils.h  win32_window.cpp  win32_window.h
windows_event_log/: README.md  pubspec.yaml
windows_event_log/example/: README.md  pubspec.yaml
windows_event_log/lib/: event_log_annotations.dart  event_log_consumer.dart  event_log_provider.dart
windows_event_log/windows/: CMakeLists.txt
windows_event_log/windows/consumer/: CMakeLists.txt  DllExports.h  EventLogConsumerApi.h  readme.md  resource.h
windows_event_log/windows/data/: DllExports.h  DllMain.cpp  readme.md  version.rc
windows_event_log/windows/provider/: CMakeLists.txt  DllExports.h  pch.h  readme.md  version.rc
windows_event_log/windows_event_log/: README.md  pubspec.yaml
windows_event_log/windows_event_log_generator/: README.md  build.yaml  pubspec.yaml
windows_event_log_generator/: pubspec.yaml
windows_single_instance/: README.md  pubspec.yaml
windows_single_instance/windows/: CMakeLists.txt
windows_splash/: README.md  pubspec.yaml
windows_splash/lib/: main.dart
windows_splash/test/: widget_test.dart
windows_splash/windows/: CMakeLists.txt
windows_sync/: .metadata  README.md  pubspec.yaml
windows_sync/lib/: sync_object.dart
windows_sync/windows/: CMakeLists.txt  DllExports.h  DllMain.cpp  Win32SyncApis.cpp  Win32SyncApis.h  framework.h  resource.h  version.rc
(+80 files in other folders)
